--- a/media_twilio_app/templates/index.html
+++ b/media_twilio_app/templates/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -5,8 +6,10 @@
 </head>
 
 <body>
-    {% for img in images_list %}
-    <p>img</p>
+    <p>{{image_list}}</p>
+    {% for img in image_list %}
+    <p>{{img}}</p>
+    <img src="/media/{{img}}" alt="NA">
     {% endfor %}
 </body>
 
