--- a/media_twilio_app/templates/index.html
+++ b/media_twilio_app/templates/index.html
@@ -9,7 +9,7 @@
     <p>{{image_list}}</p>
     {% for img in image_list %}
     <p>{{img}}</p>
-    <img src="/media/{{img}}" alt="NA">
+    <img src="/media/{{img.name}}" alt="NA">
     {% endfor %}
 </body>
 
